Update bucketing notebook

--- a/computation/similarity_values/hashed/bucketing_compute_disk_similarity_values.ipynb
+++ b/computation/similarity_values/hashed/bucketing_compute_disk_similarity_values.ipynb
@@ -28,7 +28,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project root found: c:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\n"
+      "Project root found: /Users/thomasnitsche/Developer/skole/master/masteroppgave\n",
+      "Project root found: /Users/thomasnitsche/Developer/skole/master/masteroppgave\n"
      ]
     }
    ],
@@ -54,7 +55,11 @@
     "    sys.path.append(project_root)\n",
     "    print(f\"Project root found: {project_root}\")\n",
     "else:\n",
-    "    raise RuntimeError(\"Could not find 'masteroppgave' directory\")\n"
+    "    raise RuntimeError(\"Could not find 'masteroppgave' directory\")\n",
+    "\n",
+    "from computation.disk_similarity import generate_disk_hash_similarity_with_bucketing\n",
+    "import json\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -62,15 +67,6 @@
    "metadata": {},
    "source": [
     "# Rome\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#write to file"
    ]
   },
   {
@@ -84,217 +80,49 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Project root found: c:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\n",
-      "          R_ABU     R_ADV  R_AFZ     R_AKK  R_AKY    R_ARC    R_ARU     R_AVB  \\\n",
-      "R_ABU  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.12624  0.000000   \n",
-      "R_ADV  0.000000  0.000000    0.0  0.128451    0.0  0.00000  0.00000  0.181262   \n",
-      "R_AFZ  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_AKK  0.000000  0.128451    0.0  0.000000    0.0  0.00000  0.00000  0.090051   \n",
-      "R_AKY  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_ARC  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_ARU  0.126240  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_AVB  0.000000  0.181262    0.0  0.090051    0.0  0.00000  0.00000  0.000000   \n",
-      "R_AVD  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_AVF  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_AVK  0.000000  0.000000    0.0  0.104621    0.0  0.00000  0.00000  0.000000   \n",
-      "R_AWU  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_AZS  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_BCU  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_BDC  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_BFS  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_BML  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_BNG  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_BRF  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_BTH  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_BUX  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_CAV  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_CCJ  0.000000  0.000000    0.0  0.000000    0.0  0.13396  0.00000  0.000000   \n",
-      "R_CCQ  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_CCZ  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_CDU  0.000000  0.274086    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_CEX  0.000000  0.171862    0.0  0.006655    0.0  0.00000  0.00000  0.096706   \n",
-      "R_CFV  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_CIV  0.052436  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_CNH  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_COQ  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_CPD  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_CRC  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_CYW  0.000000  0.303734    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_DAQ  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_DDN  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_DGV  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_DJT  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_DOY  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_DUB  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_DUV  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_DVK  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_DYX  0.067420  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_EBK  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_ECN  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_ECP  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_EDS  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_EDX  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_EFS  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "R_EHK  0.000000  0.000000    0.0  0.000000    0.0  0.00000  0.00000  0.000000   \n",
-      "\n",
-      "          R_AVD  R_AVF  ...  R_DUV  R_DVK     R_DYX  R_EBK     R_ECN  \\\n",
-      "R_ABU  0.000000    0.0  ...    0.0    0.0  0.067420    0.0  0.000000   \n",
-      "R_ADV  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_AFZ  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_AKK  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_AKY  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_ARC  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_ARU  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_AVB  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_AVD  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_AVF  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_AVK  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_AWU  0.102176    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_AZS  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_BCU  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_BDC  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_BFS  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_BML  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_BNG  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_BRF  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_BTH  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_BUX  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_CAV  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_CCJ  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_CCQ  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_CCZ  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_CDU  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_CEX  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_CFV  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_CIV  0.000000    0.0  ...    0.0    0.0  0.020956    0.0  0.000000   \n",
-      "R_CNH  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_COQ  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_CPD  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_CRC  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_CYW  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_DAQ  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.271936   \n",
-      "R_DDN  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_DGV  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_DJT  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_DOY  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_DUB  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_DUV  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_DVK  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_DYX  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_EBK  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_ECN  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_ECP  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_EDS  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_EDX  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_EFS  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "R_EHK  0.000000    0.0  ...    0.0    0.0  0.000000    0.0  0.000000   \n",
-      "\n",
-      "          R_ECP     R_EDS    R_EDX  R_EFS     R_EHK  \n",
-      "R_ABU  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_ADV  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_AFZ  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_AKK  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_AKY  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_ARC  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_ARU  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_AVB  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_AVD  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_AVF  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_AVK  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_AWU  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_AZS  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_BCU  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_BDC  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_BFS  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_BML  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_BNG  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_BRF  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_BTH  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_BUX  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_CAV  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_CCJ  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_CCQ  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_CCZ  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_CDU  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_CEX  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_CFV  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_CIV  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_CNH  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_COQ  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_CPD  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_CRC  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_CYW  0.000000  0.000000  0.00000    0.0  0.190584  \n",
-      "R_DAQ  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_DDN  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_DGV  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_DJT  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_DOY  0.000000  0.000000  0.18159    0.0  0.000000  \n",
-      "R_DUB  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_DUV  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_DVK  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_DYX  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_EBK  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_ECN  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_ECP  0.000000  0.240052  0.00000    0.0  0.000000  \n",
-      "R_EDS  0.240052  0.000000  0.00000    0.0  0.000000  \n",
-      "R_EDX  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_EFS  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "R_EHK  0.000000  0.000000  0.00000    0.0  0.000000  \n",
-      "\n",
-      "[50 rows x 50 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from computation.disk_similarity import generate_disk_hash_similarity_with_bucketing\n",
-    "\n",
-    "\n",
+    "city = \"rome\"\n",
     "measure = \"dtw\"\n",
+    "diameter = 0.6\n",
+    "layers = 5\n",
+    "disks = 50\n",
+    "size = 50\n",
+    "\n",
+    "\n",
     "similarities, bucket_system = generate_disk_hash_similarity_with_bucketing(\n",
-    "    city=\"rome\", diameter=0.6, layers=5, disks=50, measure=measure, size=50\n",
-    ")\n",
-    "\n",
-    "# # print all elements in bucket_system\n",
-    "# for key, value in bucket_system.items():\n",
-    "#     print(key, value)\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(similarities)\n",
-    "output_path = \"../../../results_hashed/similarity_values/disk/rome/dtw/\"\n",
-    "\n",
-    "\n",
-    "similarities.to_csv(os.path.join(output_path, \"disk_rome-dtw.csv\"))"
+    "    city=city, diameter=diameter, layers=layers, disks=disks, measure=measure, size=size\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write buckets to JSON and similarity matrix to CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accessing row R_DVK and column R_CAV\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.4753952612424382"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# Write the bucket system to a JSON file\n",
+    "bucket_system_output_file_path = f\"../../../results_hashed/buckets/disk/rome/rome_disk_diameter_{diameter}_layers_{layers}_disks_{disks}_trajectories_{size}.json\"\n",
+    "with open(bucket_system_output_file_path, \"w\") as f:\n",
+    "    json.dump(bucket_system, f)\n",
+    "    \n",
+    "# Write similarity values to csv\n",
+    "output_path = \"../../../results_hashed/similarity_values/disk/rome/dtw/\"\n",
+    "similarities.to_csv(os.path.join(output_path, f\"rome_disk_diameter_{diameter}_layers_{layers}_disks_{disks}_trajectories_{size}_{measure}.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -382,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "master_repo",
+   "display_name": "master",
    "language": "python",
    "name": "python3"
   },
