--- a/computation/similarity_values/hashed/bucketing_compute_grid_similarity_values.ipynb
+++ b/computation/similarity_values/hashed/bucketing_compute_grid_similarity_values.ipynb
@@ -21,25 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project root found: c:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'disk_similarity'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 36\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcomputation\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdisk_similarity\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m generate_disk_hash_similarity\n\u001b[1;32m---> 36\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdisk_similarity\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m generate_disk_hash_similarity\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'disk_similarity'"
+      "Project root found: /Users/thomasnitsche/Developer/skole/master/masteroppgave\n",
+      "Project root found: /Users/thomasnitsche/Developer/skole/master/masteroppgave\n"
      ]
     }
    ],
@@ -48,11 +38,6 @@
     "# Importing nescessary modules\n",
     "import os\n",
     "import sys\n",
-    "import shutil\n",
-    "import timeit as ti\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "from multiprocessing import Pool\n",
     "\n",
     "def find_project_root(target_folder=\"masteroppgave\"):\n",
     "    \"\"\"Find the absolute path of a folder by searching upward.\"\"\"\n",
@@ -74,15 +59,12 @@
     "else:\n",
     "    raise RuntimeError(\"Could not find 'masteroppgave' directory\")\n",
     "\n",
-    "from utils.helpers.save_trajectory import save_trajectory_hashes\n",
-    "from utils.helpers import file_handler as fh\n",
-    "from utils.helpers import metafile_handler as mfh\n",
-    "from schemes.lsh_disk import DiskLSH\n",
-    "import json\n",
-    "from computation.disk_similarity import generate_disk_hash_similarity\n",
-    "from disk_similarity import generate_disk_hash_similarity\n",
     "\n",
-    "import os"
+    "#Other imports\n",
+    "from computation.grid_similarity import generate_grid_hash_similarity_with_bucketing\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "\n"
    ]
   },
   {
@@ -105,12 +87,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "measure = \"dtw\"\n",
-    "similarities = generate_disk_hash_similarity(\n",
-    "    city=\"rome\", diameter=0.6, layers=5, disks=50, measure=measure, size=50\n",
-    ")\n",
-    "output_path = f\"similarity_values/disk/rome/disk_rome-{measure}.csv\"\n",
-    "similarities.to_csv(os.path.abspath(output_path))"
+    "city = \"rome\" #City to use\n",
+    "measure = \"dtw\" #Measure to use\n",
+    "res = 1.9 #Resolution to use\n",
+    "layers = 2 #Number of layers to use\n",
+    "size = 50 #Size of the grid to use\n",
+    "\n",
+    "\n",
+    "#Creates buckets and similarity matrix\n",
+    "similarities, bucket_system = generate_grid_hash_similarity_with_bucketing(\n",
+    "    city=city, res=res, layers=layers, measure=measure, size=size\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write buckets to JSON and similarity matrix to CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write the bucket system to a JSON file\n",
+    "bucket_system_output_file_path = f\"../../../results_hashed/buckets/grid/rome/rome_grid_resolution_{res}_layers_{layers}_trajectories_{size}.json\"\n",
+    "with open(bucket_system_output_file_path, \"w\") as f:\n",
+    "    json.dump(bucket_system, f)\n",
+    "    \n",
+    "# Write similarity values to csv\n",
+    "output_path = \"../../../results_hashed/similarity_values/grid/rome/dtw/\"\n",
+    "similarities.to_csv(os.path.join(output_path, f\"rome_grid_resolution_{res}_layers_{layers}_trajectories_{size}_{measure}.csv\"))\n"
    ]
   },
   {
