added method for checking true similarity between two trajectories in ground truth file

--- a/computation/bucketing/compute_bucketing_ground_truth.ipynb
+++ b/computation/bucketing/compute_bucketing_ground_truth.ipynb
@@ -13,6 +13,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Code for checking true similarity between a pair of trajectories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accessing row R_DVK and column R_CAV\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.4753952612424382"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "ROME_TRUE_SIMILARITY_FILE = \"../../results_true/similarity_values/rome/dtw/rome-dtw-3050.csv\"\n",
+    "\n",
+    "def get_true_similarity(filename1: str, filename2: str) -> float | None:\n",
+    "    \"\"\"\n",
+    "    Find the true similarity between two trajectory filenames using a similarity matrix file.\n",
+    "\n",
+    "    Args:\n",
+    "        filename1 (str): First trajectory file (with or without `.txt`).\n",
+    "        filename2 (str): Second trajectory file (with or without `.txt`).\n",
+    "\n",
+    "    Returns:\n",
+    "        float | None: The similarity value if found, otherwise None.\n",
+    "    \"\"\"\n",
+    "    # Load the similarity matrix CSV\n",
+    "    similarity_df = pd.read_csv(ROME_TRUE_SIMILARITY_FILE, index_col=0)\n",
+    "    \n",
+    "    # Clean file names by removing '.txt'\n",
+    "    t1_clean = filename1.replace('.txt', '')\n",
+    "    t2_clean = filename2.replace('.txt', '')\n",
+    "\n",
+    "    # Ensure correct row-column order for the matrix\n",
+    "    if t1_clean < t2_clean:\n",
+    "        t1_clean, t2_clean = t2_clean, t1_clean\n",
+    "\n",
+    "    # Check if both are in the DataFrame\n",
+    "    if t1_clean in similarity_df.index and t2_clean in similarity_df.columns:\n",
+    "        print(f\"Accessing row {t1_clean} and column {t2_clean}\")\n",
+    "        return float(similarity_df.loc[t1_clean, t2_clean])\n",
+    "    elif t2_clean in similarity_df.index and t1_clean in similarity_df.columns:\n",
+    "        print(f\"Accessing row {t2_clean} and column {t1_clean}\")\n",
+    "        return float(similarity_df.loc[t2_clean, t1_clean])\n",
+    "    else:\n",
+    "        print(f\"Missing pair in similarity matrix: {filename1}, {filename2}\")\n",
+    "        return None\n",
+    "    \n",
+    "\n",
+    "get_true_similarity(\"R_CAV\", \"R_DVK\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Setup"
    ]
   },
@@ -236,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "master",
+   "display_name": "master_repo",
    "language": "python",
    "name": "python3"
   },
