Minor changes to notebooks

--- a/computation/bucketing/porto_bucket_placement.ipynb
+++ b/computation/bucketing/porto_bucket_placement.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook for placing the hashed trajectories into buckets"
+    "# Notebook for placing the hashed trajectories into buckets\n",
+    "\n",
+    "Utilizes the hashes of trajectories in Porto. \n",
+    "\n",
+    "Creates buckets for both Grid and disk scheme."
    ]
   },
   {
