--- a/computation/bucketing/rome_bucket_placement.ipynb
+++ b/computation/bucketing/rome_bucket_placement.ipynb
@@ -4,22 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook for placing the hashed trajectories into buckets"
+    "# Notebook for placing the hashed trajectories into buckets\n",
+    "\n",
+    "Utilizes the hashes of trajectories in Rome. \n",
+    "\n",
+    "Creates buckets for both Grid and disk scheme."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Project root found: c:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing nescessary modules\n",
     "import os\n",
@@ -59,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +67,17 @@
     "    rome_lsh_grid_current_parameters = json.load(f)\n",
     "    \n",
     "with open(\"../hash_generation/rome_lsh_disk_current_parameters.json\", \"r\") as f:\n",
-    "    rome_lsh_disk_current_parameters = json.load(f)"
+    "    rome_lsh_disk_current_parameters = json.load(f)\n",
+    "\n",
+    "print(f\"Current rome grid config:\")\n",
+    "for key, value in rome_lsh_grid_current_parameters.items():\n",
+    "    print(f\"{key}: {value}\")\n",
+    "\n",
+    "print(\"\")\n",
+    "\n",
+    "print(f\"Current rome disk config:\")\n",
+    "for key, value in rome_lsh_disk_current_parameters.items():\n",
+    "    print(f\"{key}: {value}\")"
    ]
   },
   {
@@ -90,23 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Largest Bucket: 210474472678124806769105046041730943051\n",
-      "Total Buckets: 496\n",
-      "Buckets with more than one trajectory: 4\n",
-      "Buckets with only one trajectory: 492\n",
-      "Largest Bucket Size: 2\n",
-      "Percentage of buckets with more than one trajectory: 0.81%\n",
-      "Percentage of buckets with only one trajectory: 99.19%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import cityhash\n",
@@ -136,7 +128,7 @@
     "        # Convert the list of coordinates into a string\n",
     "        hash_string = \"_\".join(map(str, layer_hash))\n",
     "        \n",
-    "        # Use CityHash for creating a unique key\n",
+    "        # Use CityHash for creating a unique key (128 bit)\n",
     "        hash_key = cityhash.CityHash128(hash_string)\n",
     "        \n",
     "        # Place trajectory into the appropriate bucket\n",
@@ -183,20 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bucket with the most trajectories: 210474472678124806769105046041730943051 (2 trajectories)\n",
-      "Most Similar Pair (Lowest similarity value): 0.1406260090323557 between R_DUB.txt and R_ECP.txt\n",
-      "Least Similar Pair (Highest similarity value): 0.1406260090323557 between R_DUB.txt and R_ECP.txt\n",
-      "Average Similarity inside bucket '210474472678124806769105046041730943051': 0.14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from itertools import combinations\n",
@@ -292,23 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Largest Bucket: 299718756038788115561691674111661080046\n",
-      "Total Buckets: 446\n",
-      "Buckets with more than one trajectory: 22\n",
-      "Buckets with only one trajectory: 424\n",
-      "Largest Bucket Size: 6\n",
-      "Percentage of buckets with more than one trajectory: 4.93%\n",
-      "Percentage of buckets with only one trajectory: 95.07%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cityhash\n",
     "import os\n",
@@ -495,7 +462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "master_repo",
+   "display_name": "master",
    "language": "python",
    "name": "python3"
   },
