--- a/computation/similarity_values/hashed/compute_disk_similarity_values.ipynb
+++ b/computation/similarity_values/hashed/compute_disk_similarity_values.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate disk-based hashed similarities\n"
+    "# Generate disk-based hashed similarities\n",
+    "\n",
+    "Computes similarity values between hashed trajectories for the grid scheme\n"
    ]
   },
   {
