--- a/computation/similarity_values/hashed/compute_grid_similarity_values.ipynb
+++ b/computation/similarity_values/hashed/compute_grid_similarity_values.ipynb
@@ -4,18 +4,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate grid-based hashed similarities\n"
+    "# Generate grid-based hashed similarities\n",
+    "\n",
+    "Computes similarity values between hashed trajectories for the grid scheme"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from grid_similarity import generate_grid_hash_similarity\n",
+    "# Importing nescessary modules\n",
+    "import os\n",
+    "import sys\n",
+    "import shutil\n",
+    "from multiprocessing import Pool\n",
     "\n",
-    "import os"
+    "\n",
+    "def find_project_root(target_folder=\"masteroppgave\"):\n",
+    "    \"\"\"Find the absolute path of a folder by searching upward.\"\"\"\n",
+    "    currentdir = os.path.abspath(\"__file__\")  # Get absolute script path\n",
+    "    while True:\n",
+    "        if os.path.basename(currentdir) == target_folder:\n",
+    "            return currentdir  # Found the target folder\n",
+    "        parentdir = os.path.dirname(currentdir)\n",
+    "        if parentdir == currentdir:  # Stop at filesystem root\n",
+    "            return None\n",
+    "        currentdir = parentdir  # Move one level up\n",
+    "\n",
+    "# Example usage\n",
+    "project_root = find_project_root(\"masteroppgave\")\n",
+    "\n",
+    "if project_root:\n",
+    "    sys.path.append(project_root)\n",
+    "    print(f\"Project root found: {project_root}\")\n",
+    "else:\n",
+    "    raise RuntimeError(\"Could not find 'masteroppgave' directory\")\n",
+    "\n",
+    "from utils.helpers.save_trajectory import save_trajectory_hashes\n",
+    "from utils.helpers import file_handler as fh\n",
+    "from utils.helpers import metafile_handler as mfh\n",
+    "from schemes.lsh_grid import GridLSH\n",
+    "from computation.grid_similarity import generate_grid_hash_similarity\n",
+    "\n"
    ]
   },
   {
@@ -27,16 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from computation.grid_similarity import generate_grid_hash_similarity\n",
+    "\n",
+    "\n",
     "measure=\"dtw\"\n",
     "similarities = generate_grid_hash_similarity(\n",
     "    city=\"rome\", res=1.2, layers=4, measure=measure, size=50\n",
     ")\n",
-    "output_path = f\"similarity_values/grid/rome/grid_rome-{measure}.csv\"\n",
-    "similarities.to_csv(os.path.abspath(output_path))"
+    "# output_path = f\"similarity_values/grid/rome/grid_rome-{measure}.csv\"\n",
+    "# similarities.to_csv(os.path.abspath(output_path))"
    ]
   },
   {
@@ -48,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,11 +92,18 @@
     "output_path = f\"similarity_values/grid/porto/grid_porto-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "master",
    "language": "python",
    "name": "python3"
   },
@@ -75,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
