Fix runtime function

--- a/computation/similarity_values/hashed/bucketing_compute_grid_similarity_values.ipynb
+++ b/computation/similarity_values/hashed/bucketing_compute_grid_similarity_values.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "\n",
     "#Other imports\n",
-    "from computation.grid_similarity import generate_grid_hash_similarity_with_bucketing\n",
+    "from computation.similarity import generate_grid_hash_similarity_with_bucketing\n",
     "import json\n",
     "import pandas as pd\n",
     "\n"
@@ -168,7 +168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "master_repo",
+   "display_name": "master",
    "language": "python",
    "name": "python3"
   },
