Create sheet for bucket evaluation functions

--- a/computation/similarity_values/hashed/bucketing_compute_grid_similarity_values.ipynb
+++ b/computation/similarity_values/hashed/bucketing_compute_grid_similarity_values.ipynb
@@ -116,11 +116,25 @@
     "# Write the bucket system to a JSON file\n",
     "bucket_system_output_file_path = f\"../../../results_hashed/buckets/grid/rome/rome_grid_resolution_{res}_layers_{layers}_trajectories_{size}.json\"\n",
     "with open(bucket_system_output_file_path, \"w\") as f:\n",
-    "    json.dump(bucket_system, f)\n",
-    "    \n",
+    "    json.dump(bucket_system, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write similarity matrix to CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Write similarity values to csv\n",
     "output_path = \"../../../results_hashed/similarity_values/grid/rome/dtw/\"\n",
-    "similarities.to_csv(os.path.join(output_path, f\"rome_grid_resolution_{res}_layers_{layers}_trajectories_{size}_{measure}.csv\"))\n"
+    "similarities.to_csv(os.path.join(output_path, f\"rome_grid_resolution_{res}_layers_{layers}_trajectories_{size}_{measure}.csv\"))"
    ]
   },
   {
